# debug-dungeon-backend

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/: admin.py  factories.py  models.py  pagination.py  serializers.py  urls.py  views.py
app/management/commands/: seed.py
app/migrations/: 0001_initial.py  0002_alter_comment_repository_link_alter_project_tags.py  0002_alter_project_title.py  0003_alter_tag_name.py  0003_project_repository_link.py  0004_project_timestamp.py  0005_alter_project_timestamp.py  0006_alter_project_timestamp.py  0007_rename_timestamp_project_created_project_modified.py  0008_remove_comment_timestamp_comment_created_and_more.py
backend/: middleware.py  permissions.py  settings.py  urls.py
docs/: specification.md
