[project]
name = "debugdungeonbackend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.5",
    "django-cors-headers>=4.8.0",
    "djangorestframework>=3.16.1",
    "factory-boy>=3.3.3",
    "faker>=37.6.0",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.8",
]
